# hipeac-mcp

./: .gitignore  Dockerfile  Procfile  README.md  app.json  pyproject.toml  run
.github/instructions/: main.instructions.md  python.instructions.md
.github/workflows/: tests.yml
hipeac_mcp/: __init__.py  __main__.py  db.py  server.py  settings.py
hipeac_mcp/models/: __init__.py  institutions.py  membership.py  metadata.py  users.py
hipeac_mcp/resources/: __init__.py  metadata.py
hipeac_mcp/schemas/: __init__.py  members.py  metadata.py
hipeac_mcp/tools/: __init__.py  members.py  metadata.py
tests/: conftest.py  test_server.py
tests/resources/: test_metadata.py
tests/tools/: test_members.py  test_metadata.py  test_metadata_benchmark.py
